# RenegadeX-patcher-lib

./: .gitignore  Cargo.toml  README.md
.github/: dependabot.yml
src/: apply.rs  directory.rs  download_entry.rs  downloader.rs  error.rs  filesystem.rs  hashes.rs  instruction_group.rs  instructions.rs  lib.rs  main.rs  mirrors.rs  old.rs  patch_entry.rs  patcher.rs  patcher_builder.rs  pausable.rs  progress.rs  tests.rs  traits.rs  utilities.rs  verify.rs
src/functions/: apply_instructions.rs  apply_patch.rs  convert_bytes.rs  delete_file.rs  determine_action.rs  determine_parts_to_download.rs  download.rs  download_file_in_parallel.rs  download_instructions.rs  flow.rs  get_game_state.rs  get_hash.rs  human_readable_bytesize.rs  mod.rs  parse_instructions.rs  read_dir.rs  remove_unversioned.rs  restore_backup.rs  retrieve_instructions.rs
src/functions/instructions/: process_instructions.rs
src/implementations/: buffered_writer.rs  directory.rs  error.rs  file_part.rs  instruction.rs  mirror.rs  mirrors.rs  mod.rs  progress.rs  response.rs  version_information.rs
src/structures/: action.rs  buffered_writer.rs  directory.rs  download_entry.rs  error.rs  file.rs  file_part.rs  game_state.rs  hash_member.rs  instruction.rs  instruction_group.rs  launcher_info.rs  launcher_version.rs  mirror.rs  mirrors.rs  mod.rs  named_url.rs  progress.rs  response.rs  software_version.rs  update.rs  version_information.rs
src/traits/: as_string.rs  mod.rs  traits.rs
tests/: instructions.json  test.rs
