[package]
name = "renegadex_patcher"
version = "0.9.5"
authors = ["SonnyX"]
edition = "2018"

[dependencies]
json = "0.12"
sha2 = "0.9"
hex = "0.4"
rust-ini = "0.16"
rayon = "1.5"
rand = "0.8"
xdelta = { git = "https://github.com/SonnyX/xdelta-decoder-rust.git" }
num_cpus = "1.13"
tokio = { version = "1.1", features = ["full"] }
crossbeam-queue = "0.3"
url = "2.2"
futures = "0.3"
tokio-tls = "0.3"
runas = { git = "https://github.com/SonnyX/rust-runas.git" }
log = "0.4"
download-async = "0.9"
async-trait = "0.1"

[profile.test]
opt-level = 3
debug = 2

[profile.dev]
opt-level = 3
debug = true
