[package]
name = "renegadex_patcher"
version = "0.9.6"
authors = ["SonnyX"]
edition = "2021"

[dependencies]
json = "0.12"
sha2 = "0.10"
hex = "0.4"
xdelta = { git = "https://github.com/SonnyX/xdelta-decoder-rust.git" }
tokio = { version = "1.38.1", features = ["full", "tracing"] }
url = "2.5"
futures = "0.3"
runas = { git = "https://github.com/SonnyX/rust-runas.git" }
tracing = "0.1"
download-async = "0.10"
async-trait = "0.1"

[profile.test]
opt-level = 3
debug = 2

[profile.dev]
opt-level = 3
debug = true
